[IMP] survey: harmonize survey title display
- At the beginning or the end of a survey, the survey title no longer appears
at the top of the page but just above the description to facilitate user reading;
- Between steps, the title fades in/out to match the rest of the page styling;
- The title is not shown in "one question per page" mode.

task-4778192

--- a/addons/survey/static/src/scss/survey_templates_form.scss
+++ b/addons/survey/static/src/scss/survey_templates_form.scss
@@ -286,6 +286,10 @@ _::-webkit-full-page-media, _:future, :root .o_survey_wrap {
             opacity: 1;
         }
     }
+
+    .o_survey_main_title_fade {
+        transition: opacity 0.4s ease-in-out;
+    }
 }
 
 /**********************************************************
