[IMP] survey: replace helper with template selector component
This helper display the survey templates when no records are found in the view
and allows to select one to create a new survey.

To allow this view to be extended by other modules, the following changes
were needed:
- Remove the 'help' field from the XML view, as it does not allow inheritance;
- Introduce custom JS components (kanban + list) and implement a
'SurveySurveyActionHelper', now used in the survey view.

While we're at it, we:
- Renamed '.survey_sample_card' to '.o_survey_sample_card' for naming
consistency.
- Removed the old "custom survey" icon, which is no longer used.
- Write " #" pretty with "  #" (otherwise the runbot won't like it)

task-4778192

Part-of: odoo/odoo#210310
Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>

--- a/addons/survey/static/src/scss/survey_survey_views.scss
+++ b/addons/survey/static/src/scss/survey_survey_views.scss
@@ -120,7 +120,7 @@
 
 /* Style of the tiles allowing the user to load a sample survey. */
 
-.survey_sample_card {
+.o_survey_sample_card {
     &:hover {
         * { 
             color: $primary !important;
