[IMP] *: update the res.users form views
This commit modifies the fields on the preferences / profile form, which
allows users to read or modify their own data depending on their
permissions, and on the user form for the administrators. The aim of this
change is to display more relevant information to users.

The hr.res_users_view_form_simple_modif view has been removed and merged in
the mail_bot_hr.res_users_view_form_simple_modif view since it must not be
used anymore for the preferences form as this one must not have a different
display when the hr module is installed.

As some fields are removed from the forms and are not longer used, they are
also removed from the res.users model.

Enterprise PR: https://github.com/odoo/enterprise/pull/88518
Upgrade PR: https://github.com/odoo/upgrade/pull/8207

Task-4775990

--- a/addons/auth_passkey/views/auth_passkey_key_views.xml
+++ b/addons/auth_passkey/views/auth_passkey_key_views.xml
@@ -1,5 +1,27 @@
 <?xml version="1.0"?>
 <odoo>
+    <record id="auth_passkey_key_view_kanban" model="ir.ui.view">
+        <field name="name">auth.passkey.key.kanban</field>
+        <field name="model">auth.passkey.key</field>
+        <field name="arch" type="xml">
+            <kanban create="0" can_open="0">
+                <templates>
+                    <t t-name="menu">
+                        <a role="menuitem" type="object" name="action_rename_passkey" class="dropdown-item">Rename</a>
+                        <a role="menuitem" type="object" name="action_delete_passkey" class="dropdown-item">Delete</a>
+                    </t>
+                    <t t-name="card">
+                        <div>
+                            <field name="name" class="fw-bold fs-5"/>
+                            <field name="create_date" class="ms-2 text-muted"/>
+                        </div>
+                        <small>Last used: <field name="write_date"/></small>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
     <record id="auth_passkey_key_rename" model="ir.ui.view">
         <field name="name">auth.passkey.key.rename</field>
         <field name="model">auth.passkey.key</field>
