--- a/addons/auth_passkey/views/res_users_views.xml
+++ b/addons/auth_passkey/views/res_users_views.xml
@@ -5,24 +5,22 @@
         <field name="model">res.users</field>
         <field name="inherit_id" ref="base.view_users_form"/>
         <field name="arch" type="xml">
-            <page name="account_security" position="inside">
-                <group string="Passkeys">
-                    <field colspan="4" name="auth_passkey_key_ids" string="">
-                        <kanban create="false" can_open="false">
-                            <templates>
-                                <t t-name="menu">
-                                    <a role="menuitem" type="delete" class="dropdown-item">Delete</a>
-                                </t>
-                                <t t-name="card">
-                                    <field name="name" class="fw-bold fs-5"/>
-                                    <small>Created: <field name="create_date"/></small>
-                                    <small>Last used: <field name="write_date"/></small>
-                                </t>
-                            </templates>
-                        </kanban>
-                    </field>
-                </group>
-            </page>
+            <xpath expr="//div[@name='api_keys']" position="after">
+                <div invisible="id != uid" class="d-md-flex mt-3" >
+                    <div class="col-md-6 col-lg-3 d-flex flex-column">
+                        <label for="action_create_passkey" string="Passkeys" class="o_form_label"/>
+                        <span class="text-muted">
+                            Recommended for extra security.
+                        </span>
+                    </div>
+                    <div class="w-md-50 w-lg-75 d-flex flex-column my-auto">
+                        <field name="auth_passkey_key_ids" invisible="not auth_passkey_key_ids" mode="kanban" class="w-sm-75 w-md-100 w-lg-75 w-xl-50 o_auth_passkey_kanban_view"/>
+                        <div>
+                            <button type="object" name="action_create_passkey" class="btn btn-secondary h-100" string="Add Passkey"/>
+                        </div>
+                    </div>
+                </div>
+            </xpath>
         </field>
     </record>
 
@@ -31,33 +29,22 @@
         <field name="model">res.users</field>
         <field name="inherit_id" ref="base.view_users_form_simple_modif"/>
         <field name="arch" type="xml">
-            <page name="page_account_security" position="inside">
-                <group string="Passkeys">
-                    <div colspan="2">
-                        <div class="text-muted mb-3" colspan="2">
-                            Passkeys are a replacement for your username and password, offering a more secure way of logging in.
-                        </div>
-                        <div class="mb-2 gap-1" style="display: flex;" colspan="4">
-                            <button colspan="2" type="object" name="action_create_passkey" class="btn-secondary" string="Add Passkey"/>
-                        </div>
-                        <field colspan="4" name="auth_passkey_key_ids">
-                            <kanban create="false" can_open="false">
-                                <templates>
-                                    <t t-name="menu">
-                                        <a role="menuitem" type="object" name="action_rename_passkey" class="dropdown-item">Rename</a>
-                                        <a role="menuitem" type="object" name="action_delete_passkey" class="dropdown-item">Delete</a>
-                                    </t>
-                                    <t t-name="card">
-                                        <field name="name" class="fw-bold fs-5"/>
-                                        <small>Created: <field name="create_date"/></small>
-                                        <small>Last used: <field name="write_date"/></small>
-                                    </t>
-                                </templates>
-                            </kanban>
-                        </field>
+            <xpath expr="//div[@name='api_keys']" position="after">
+                <div class="d-lg-flex mt-3">
+                    <div class="col-lg-3 d-flex flex-column">
+                        <label for="action_create_passkey" string="Passkeys" class="o_form_label"/>
+                        <span class="text-muted">
+                            Recommended for extra security.
+                        </span>
                     </div>
-                </group>
-            </page>
+                    <div class="w-lg-75 d-flex flex-column my-auto">
+                        <field name="auth_passkey_key_ids" invisible="not auth_passkey_key_ids" mode="kanban" class="w-lg-75 o_auth_passkey_kanban_view"/>
+                        <div>
+                            <button type="object" name="action_create_passkey" class="btn btn-secondary h-100" string="Add Passkey"/>
+                        </div>
+                    </div>
+                </div>
+            </xpath>
         </field>
     </record>
 </odoo>
