--- a/addons/auth_signup/views/res_users_views.xml
+++ b/addons/auth_signup/views/res_users_views.xml
@@ -8,13 +8,15 @@
             <field name="arch" type="xml">
                 <!-- add state field in header -->
                 <xpath expr="//header" position="inside">
-                    <button string="Send Password Reset Instructions"
-                                type="object" name="action_reset_password"
-                                invisible="state != 'active'"/>
                     <button string="Send an Invitation Email"
                                 type="object" name="action_reset_password" context="{'create_user': 1}"
                                 invisible="state != 'new'"/>
                     <field name="state" widget="statusbar"/>
+                </xpath>
+                <xpath expr="//div[@name='auth']" position="inside">
+                    <button string="Send Password Reset"
+                            type="object" name="action_reset_password"
+                            invisible="id == uid or state != 'active'" class="btn btn-secondary h-100 ms-2 my-auto"/>
                 </xpath>
             </field>
         </record>
