--- a/addons/hr/static/src/scss/hr.scss
+++ b/addons/hr/static/src/scss/hr.scss
@@ -2,11 +2,6 @@
     --KanbanRecord-width: 450px;
     --KanbanRecord-width-small: 350px;
 }
-.o_hr_employee_profile_form_view .o_form_renderer{
-    .o_form_sheet_bg {
-        max-width: unset;
-    }
-}
 
 .o_icon_employee_absent {
     color: $warning;
@@ -56,6 +51,13 @@
     }
     .o_presence_status_pill_wrapper{
         flex: 3;
+    }
+}
+
+// Dirty hopefully temporary hack to keep the field aligned with the others
+.o_hr_user_preferences_form_view {
+    .o_address_state .o_many2one.text-truncate {
+        overflow: clip !important;
     }
 }
 
