--- a/addons/auth_totp_mail/views/res_users_views.xml
+++ b/addons/auth_totp_mail/views/res_users_views.xml
@@ -5,14 +5,19 @@
         <field name="model">res.users</field>
         <field name="inherit_id" ref="auth_totp.view_totp_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//button[@name='action_totp_enable_wizard']" position="after">
-                <button groups="base.group_erp_manager" invisible="id == uid"
-                        name="action_totp_invite" string="Invite to use 2FA" type="object" class="btn btn-secondary"/>
+            <xpath expr="//div[@name='div_action_totp_enable_wizard']" position="inside">
+                <button groups="base.group_erp_manager" invisible="id == uid or totp_enabled"
+                        name="action_totp_invite" string="Invite to use 2FA" type="object" class="btn btn-secondary h-100"/>
+            </xpath>
+            <xpath expr="//div[@name='div_action_totp_enable_wizard']/span" position="attributes">
+                <attribute name="class" add="me-2" separator=" "/>
             </xpath>
         </field>
     </record>
 
     <!-- View used when coming from "invite to use 2FA" mail -->
+    <!-- The notebook is overridden to avoid displaying irrelevant data and show
+    only the button to enable the 2FA button. -->
     <record model="ir.ui.view" id="auth_totp_mail.res_users_view_form">
         <field name="name">res.users.view.form.auth.totp.mail</field>
         <field name="model">res.users</field>
@@ -24,18 +29,21 @@
                 <attribute name='edit'>0</attribute>
                 <attribute name='delete'>0</attribute>
             </form>
-            <h1 position="replace"/>
-            <xpath expr="//field[@name='image_1920']" position="replace"/>
-            <notebook position="before">
-                <field name="image_1920" widget="image" class="oe_avatar" options="{'zoom': true, 'preview_image':'image_128'}"/>
-                    <div class="oe_title">
-                        <h1>
-                            <field name="name" placeholder="Name" required="True" readonly="context.get('from_my_profile', False)"/>
-                        </h1>
+            <notebook position="replace">
+                <div class="d-flex mt-3">
+                    <div class="col-7 col-sm-6 col-lg-3 d-flex flex-column">
+                        <label for="totp_enabled" string="Two-factor Authentication" class="o_form_label"/>
+                        <span class="text-muted">
+                            Recommended for extra security.
+                        </span>
                     </div>
+                    <field name="totp_enabled" invisible="1"/> <!-- Required for the visibility of the 2FA buttons. -->
+                    <button invisible="totp_enabled" name="action_totp_enable_wizard"
+                        type="object" class="btn btn-secondary h-100" string="Enable 2FA" help="Click to enable 2FA."/>
+                    <button invisible="not totp_enabled" name="action_totp_enable_wizard"
+                        type="object" disabled="1" class="btn btn-secondary h-100 disabled" string="Enable 2FA"/>
+                </div>
             </notebook>
-            <page name="preferences_page" position="replace"></page>
-            <footer position="replace"/>
         </field>
     </record>
 </odoo>
