--- a/addons/google_calendar/views/res_users_views.xml
+++ b/addons/google_calendar/views/res_users_views.xml
@@ -10,18 +10,16 @@
                     <attribute name="invisible">0</attribute>
                 </xpath>
                 <group name="calendar_accounts" position="inside">
-                    <group string="Google Calendar">
-                        <group class="text-break">
-                            <field name="google_calendar_rtoken" readonly="1" groups="base.group_system"/>
-                            <field name="google_calendar_token" readonly="1"/>
-                            <field name="google_calendar_token_validity" readonly="1"/>
-                            <field name="google_calendar_sync_token" readonly="1"/>
-                            <field name="google_calendar_cal_id" readonly="1"/>
-                            <button
-                                string="Reset Account" colspan="2" class="btn btn-secondary mt-3"
-                                type="action" name="%(google_calendar_reset_account_action)d"
-                                context="{'default_user_id': id}"/>
-                        </group>
+                    <group string="Google Calendar" class="text-break" invisible="share">
+                        <field name="google_calendar_rtoken" readonly="1" groups="base.group_system"/>
+                        <field name="google_calendar_token" readonly="1"/>
+                        <field name="google_calendar_token_validity" readonly="1"/>
+                        <field name="google_calendar_sync_token" readonly="1"/>
+                        <field name="google_calendar_cal_id" readonly="1"/>
+                        <button
+                            string="Reset Account" colspan="2" class="btn btn-secondary mt-3"
+                            type="action" name="%(google_calendar_reset_account_action)d"
+                            context="{'default_user_id': id}"/>
                     </group>
                 </group>
             </field>
