--- a/addons/hr/views/res_config_settings_views.xml
+++ b/addons/hr/views/res_config_settings_views.xml
@@ -64,7 +64,7 @@
                         </setting>
                     </block>
                     <block title="Employee Update Rights" name="employee_rights_setting_container">
-                        <setting help="Allow employees to update Work Information on My Profile" title="Allow employees to update Work Information on My Profile.">
+                        <setting help="Allow users to update their employee profile on My Profile" title="Allow users to update their employee profile on My Profile.">
                             <field name="hr_employee_self_edit"/>
                         </setting>
                     </block>
