--- a/addons/mail/views/res_users_views.xml
+++ b/addons/mail/views/res_users_views.xml
@@ -22,18 +22,15 @@
             <field name="inherit_id" ref="base.view_users_form_simple_modif"/>
             <field name="arch" type="xml">
                 <data>
-                    <xpath expr="//group[@name='signature']|//field[@name='signature']" position="before">
-                        <group string="Discuss" name="discuss">
-                            <field name="notification_type" widget="radio" readonly="0"/>
-                            <field name="outgoing_mail_server_id" invisible="1"/> <!-- Used by the mail_server_configurator_selection widget -->
-                            <span class="o_form_label" invisible="not has_external_mail_server">Outgoing Mail Server</span>
-                            <field name="outgoing_mail_server_type"
-                                nolabel="1"
-                                string="Outgoing Mail Server"
-                                widget="mail_server_configurator_selection"
-                                invisible="not has_external_mail_server"/>
-                            <field name="role_ids" widget="many2many_tags" readonly="not can_edit_role"/>
-                        </group>
+                    <xpath expr="//group[@name='other_preferences']" position="inside">
+                        <field name="notification_type" widget="radio" readonly="0" options="{'horizontal': true}"/>
+                        <field name="outgoing_mail_server_id" invisible="1"/> <!-- Used by the mail_server_configurator_selection widget -->
+                        <span class="o_form_label fw-bold" invisible="not has_external_mail_server">Outgoing Mail Server</span>
+                        <field name="outgoing_mail_server_type"
+                            nolabel="1"
+                            string="Outgoing Mail Server"
+                            widget="mail_server_configurator_selection"
+                            invisible="not has_external_mail_server"/>
                     </xpath>
                     <field name="signature" position="attributes">
                         <attribute name="widget">html_mail</attribute>
@@ -55,18 +52,15 @@
             <field name="inherit_id" ref="base.view_users_form"/>
             <field name="arch" type="xml">
                 <data>
-                    <xpath expr="//group[@name='messaging']|//field[@name='signature']" position="before">
-                        <group string="Discuss" name="discuss">
-                            <field name="notification_type" widget="radio" invisible="share"/>
-                            <field name="outgoing_mail_server_id" invisible="1"/> <!-- Used by the mail_server_configurator_selection widget -->
-                            <span class="o_form_label" invisible="not has_external_mail_server">Outgoing Mail Server</span>
-                            <field name="outgoing_mail_server_type"
-                                nolabel="1"
-                                string="Outgoing Mail Server"
-                                widget="mail_server_configurator_selection"
-                                invisible="not has_external_mail_server"/>
-                            <field name="role_ids" widget="many2many_tags" readonly="not can_edit_role"/>
-                        </group>
+                    <xpath expr="//group[@name='other_preferences']" position="inside">
+                        <field name="notification_type" widget="radio" invisible="share" options="{'horizontal': true}"/>
+                        <field name="outgoing_mail_server_id" invisible="1"/> <!-- Used by the mail_server_configurator_selection widget -->
+                        <span class="o_form_label fw-bold" invisible="not has_external_mail_server">Outgoing Mail Server</span>
+                        <field name="outgoing_mail_server_type"
+                            nolabel="1"
+                            string="Outgoing Mail Server"
+                            widget="mail_server_configurator_selection"
+                            invisible="not has_external_mail_server"/>
                     </xpath>
                     <field name="signature" position="attributes">
                         <attribute name="widget">html_mail</attribute>
