--- a/addons/sale_stock/views/res_users_views.xml
+++ b/addons/sale_stock/views/res_users_views.xml
@@ -6,10 +6,8 @@
             <field name="model">res.users</field>
             <field name="inherit_id" ref="base.view_users_form_simple_modif"/>
             <field name="arch" type="xml">
-                <group name="signature" position="after">
-                    <group name="Warehouses">
-                        <field name="property_warehouse_id" groups="stock.group_stock_multi_warehouses"/>
-                    </group>
+                <group name="other_preferences" position="inside">
+                    <field name="property_warehouse_id" groups="stock.group_stock_multi_warehouses"/>
                 </group>
             </field>
         </record>
@@ -32,10 +30,8 @@
             <field name="model">res.users</field>
             <field name="inherit_id" ref="base.view_users_form"/>
             <field name="arch" type="xml">
-                <group name="messaging" position="after">
-                    <group name="Warehouses" string="Inventory" groups="stock.group_stock_multi_warehouses">
-                        <field name="property_warehouse_id" groups="stock.group_stock_multi_warehouses"/>
-                    </group>
+                <group name="other_preferences" position="inside">
+                    <field name="property_warehouse_id" groups="stock.group_stock_multi_warehouses"/>
                 </group>
             </field>
         </record>
